[1.55] Ampere Altra support, sync - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -118,6 +118,12 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Lenovo ThinkSystem HR330A
 		<li>Lenovo ThinkSystem HR350A
 	</ul>
+	<li>Ampere Altra
+	<ul>
+		<li>GIGABYTE R152-P30/31/32
+		<li>GIGABYTE E252-P30/31
+		<li>GIGABYTE R272-P30/31/32/33
+	</ul>
 	<li>Apple M1
 	<ul>
 		<li>Apple Mac mini (M1, 2020)
@@ -171,6 +177,10 @@ OpenBSD на этих машинах.
 <p>
 Не забывайте, что Raspberry Pi 3 модели B+ отличается от первоночальной Raspberry Pi 3;
 некоторые важные компоненты (devices) на B+ <b>НЕ</b> поддеживаются.
+
+<p>
+Поддержка систем Ampere Altra была добавлена уже после релиза OpenBSD 7.1.
+Для этих систем понадобится последний snapshot, пока не будет доступна OpenBSD 7.2.
 
 <h4>Ethernet</h4>
 <ul>
