--- a/faq/ports/guide.html
+++ b/faq/ports/guide.html
@@ -798,8 +798,6 @@ in two variants:
 You need to write those <code>COMMENT-s1</code> and <code>COMMENT-s2</code>
 in the <code>Makefile</code>, split your <code>PLIST</code> into two parts,
 and create <code>DESCR-s1/DESCR-s2</code>.
-You will also need to specify separate <code>PKGNAME</code>s
-for all subpackages.
 
 <p>
 It is a good idea to start with the minimal framework work required:
@@ -843,35 +841,37 @@ allowed to modify the actual package contents.
 
 <p>
 For instance, assuming you separated the graphical interface into a separate
-subpackage (<code>MULTI_PACKAGES=-core -x11</code>), you could create a pseudo
+subpackage (<code>MULTI_PACKAGES=-main -x11</code>), you could create a pseudo
 flavor <code>no_x11</code> that avoids building the -x11 subpackage.
-The crucial point is that this flavor should NOT affect the -core package
+The crucial point is that this flavor should NOT affect the -main package
 in any way.
 
 <p>
 You would end up with a <code>Makefile</code> that looks something like this:
 
 <pre class="cmdbox">
-CATEGORIES = app
-COMMENT-core = foo core application
-COMMENT-x11 = foo graphical interface
-V = 1.0
-DISTNAME = foo-$V
-PKGNAME-core = foo-core-$V
-PKGNAME-x11 = foo-x11-$V
-PSEUDO_FLAVORS = no_x11
-FLAVOR ?=
-CONFIGURE_STYLE = gnu
+COMMENT-main =	foo core application
+COMMENT-x11 =	foo graphical interface
 
-MULTI_PACKAGES = -core
+V =		1.0
+DISTNAME =	foo-$V
+CATEGORIES =	app
+
+MULTI_PACKAGES =	-main -x11
+PSEUDO_FLAVORS =	no_x11
+FLAVOR ?=
+
 WANTLIB = c m crypto ssl
 WANTLIB-x11 = ${WANTLIB} X11 Xt
-RUN_DEPENDS-x11 = ${BASE_PKGPATH},-core
 
-.if ${FLAVOR:L:Mno_x11}
+RUN_DEPENDS-x11 =	${BASE_PKGPATH},-main&gt;=$V
+
+CONFIGURE_STYLE =	gnu
+
+.include &lt;bsd.port.arch.mk&gt;
+
+.if !${BUILD_PACKAGES:M-x11}
 CONFIGURE_ARGS += --disable-x11
-.else
-MULTI_PACKAGES += -x11
 .endif
 
 .include &lt;bsd.port.mk&gt;
@@ -1299,12 +1299,6 @@ See <code>/usr/ports/infrastructure/db/user.list</code> for details.
 OpenBSD is strongly security-oriented.
 You should read and understand this page's
 <a href="#PortsSecurity">security section</a>.
-
-<li>
-Be sure to add the <code>&#36;OpenBSD&#36;</code> CVS tag to the Makefile.
-The account name, version number, etc., will be filled in automatically
-by CVS during commit, you do not need to add those or touch those lines
-in an update.
 
 <li>
 The goal is to get all ported applications to support OpenBSD.
