--- a/faq/index.html
+++ b/faq/index.html
@@ -35,7 +35,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
     <td><a href="ports/index.html"                          >Книга по портам</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/upgrade70.html">Обновление до 7.0</a></td>
+    <td><a href="https://www.openbsd.org/faq/upgrade71.html">Обновление до 7.1</a></td>
     <td><a href="../mail.html"                              >Почтовые рассылки</a></td>
     <td><a href="ports/testing.html"                        >Тестирование портов</a></td>
   </tr>
@@ -69,6 +69,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq4.html#Install"     >Выполнение простой установки</a>
 <li><a href="faq4.html#FilesNeeded" >Выбор устанавливаемых компонентов</a>
 <li><a href="faq4.html#Partitioning">Создание разделов на диске</a>
+<li><a href="faq4.html#WifiOnly    ">Bootstrapping Wireless Firmware</a>
 <li><a href="faq4.html#SendDmesg"   >Отправка вашего dmesg после установки</a>
 <li><a href="faq4.html#site"        >Настройка процесса установки</a>
 <li><a href="faq4.html#Multibooting">Мультизагрузка</a>
@@ -80,6 +81,10 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq10.html#rc"        >Системные демоны</a>
 <li><a href="faq10.html#doas"      >Выполнение команд от имени другого пользователя</a>
 <li><a href="faq10.html#vipw"      >Редактирование файла паролей</a>
+<li><a href="faq10.html#LostPW"    >Сбросить пароль root</a>
+<li><a href="faq10.html#OpenNTPD"  >Настройка времени, использование OpenNTPD</a>
+<li><a href="faq10.html#TimeZone"  >Часовые пояса</a>
+<li><a href="faq10.html#locales"   >Набор символов (character sets) и локализация</a>
 <li><a href="faq10.html#SKey"      >Использование S/Key</a>
 <li><a href="faq10.html#Dir"       >Служба каталогов (Directory Services)</a>
 </ul>
@@ -141,15 +146,6 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq7.html#VGAConsoles">Консоли на VGA Hardware</a>
 <li><a href="faq7.html#Blanker"    >Отчистка неактивной консоли</a>
 <li><a href="faq7.html#SerCon"     >Последовательный порт для доступа к консоли</a>
-</ul>
-
-<h3><a href="faq8.html">Общие вопросы</a></h3>
-<ul>
-<li><a href="faq8.html#LostPW"    >Я забыл пароль для root</a>
-<li><a href="faq8.html#OpenNTPD"  >Использование OpenNTPD</a>
-<li><a href="faq8.html#TimeZone"  >Часовые пояса</a>
-<li><a href="faq8.html#locales"   >Набор символов (character sets) и локализация</a>
-<li><a href="faq8.html#GenNotConf">Устройсто "not configured" в dmesg</a>
 </ul>
 
 <h3><a href="faq11.html">X Window System</a></h3>
