[1.393] typo fix (altroot) - faq/faq14.htm

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -337,7 +337,7 @@ bfb4775bb8397569.a /altroot ffs xx 0 0
 # <b>echo ROOTBACKUP=1 >>/etc/daily.local</b>
 </pre>
 
-Так как данные, регулярно копирующиеся в <code>/altroot</code>, будую включать и
+Так как данные, регулярно копирующиеся в <code>/altroot</code>, будут включать и
 ваш <code>/etc</code>, это гарантирует, что копии любых изменений в конфигурации
 системы будут обновляться ежедневно.
 
