[1.227] sync - faq/faq13.html

--- a/faq/faq13.html
+++ b/faq/faq13.html
@@ -156,16 +156,24 @@ audio1 at uaudio0
 В большинстве систем первым аудиоустройством является внутренняя
 звуковая карта. USB-аудиоустройство при подключении становится вторым.
 По умолчанию <a href="https://man.openbsd.org/sndiod">sndiod(8)</a>
-конфигурации, оба устройства известны программам как
-<code>snd/0</code> (по умолчанию), и <code>snd/1</code>
-соответственно могут использоваться независимо.
-Программы, настроенные для использования <code>snd/1</code>,
-будут использовать USB-устройство.
+настроен таким образом, что оба устройства видны для программ как
+<code>snd/0</code> и <code>snd/1</code> соответственно.
+Они могут использоваться независимо.
 
 <p>
-<a href="https://man.openbsd.org/sndiod">sndiod(8)</a> можно настроить
-чтобы <code>snd/0</code> соответствовал USB-устройству, если оно подключено,
-или к внутреннему, если нет:
+Программы будут использовать <code>snd/default</code>,
+которое по умолчанию указывает на <code>snd/0</code>.
+Эту связку можно быстро поменять при помощи <code>server.device</code>
+таким образом:
+
+<pre class="cmdbox">
+$ <b>sndioctl server.device=1</b>
+</pre>
+
+Кроме того, <a href="https://man.openbsd.org/sndiod">sndiod(8)</a>
+можно настроить так, чтобы <code>snd/default</code> соответствовало
+USB-устройству, когда оно подключено, или внутреннему устройству
+в противном случае:
 
 <pre class="cmdbox">
 # <b>rcctl set sndiod flags -f rsnd/0 -F rsnd/1</b>
@@ -255,10 +263,10 @@ $ <b>aucat -i file.wav</b>
 </pre>
 
 Настройте свою программу для записи звука с устройства
-<code>snd/0.mon</code>, например:
+<code>snd/mon</code>, например:
 
 <pre class="cmdbox">
-$ <b>aucat -f snd/0.mon -o file.wav</b>
+$ <b>aucat -f snd/mon -o file.wav</b>
 </pre>
 
 На этом этапе все, что воспроизводит ваша система,
@@ -356,10 +364,19 @@ sndiod(8) можно настроить для приема подключени
 
 Звуковое устройство по умолчанию выбирается с помощью <code>AUDIODEVICE</code>
 переменного окружения.
-Если он не установлен, используется <code>snd/0</code>, который является первым аудиоустройством.
+Если он не установлен, используется <code>snd/default</code>, который является указателем на первое аудиоустройство.
 под управлением <a href="https://man.openbsd.org/sndiod">sndiod(8)</a>.
 Самый гибкий способ выбора устройства по умолчанию - экспорт
 <code>AUDIODEVICE</code>, возможно, в профиле входа пользователя.
+
+<p>
+Кроме того, устройство <a href="https://man.openbsd.org/sndiod">sndiod(8)</a>
+по умолчанию может быть изменено на лету при помощи <code>server.device</code>,
+предоставляемого <a href="https://man.openbsd.org/sndioctl">sndioctl(1)</a>:
+
+<pre class="cmdbox">
+$ <b>sndioctl server.device=1</b>
+</pre>
 
 <p>
 Другой способ изменить устройство вывода звука по умолчанию - сделать желаемый
