--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,17 @@ td {
 <table>
 <tr>
 <td>
+    <a id="r2k22" href="images/hackathons/r2k22.gif">
+    <img src="images/hackathons/r2k22-s.gif" alt="r2k22"></a><br>
+    r2k22: hackathon<br>
+    Июнь 25 - июль 1, 2022<br>
+    Брюгес, Бельгия<br>
+    24 разработчика<br>
+    Организован благодаря финансированию со стороны
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и поддержке Stefan Sperling.
+    <br>
+<td>
     <a id="h2k21" href="images/hackathons/h2k21.gif">
     <img src="images/hackathons/h2k21-s.gif" alt="h2k21"></a><br>
     h2k21: hackathon<br>
