[1.56] sync - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -132,6 +132,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Apple iMac (24-inch, M1, 2021)
 		<li>Apple MacBook Pro (14-inch, M1 Pro/Max, 2021)
 		<li>Apple MacBook Pro (16-inch, M1 Pro/Max, 2021)
+		<li>Apple Studio (M1 Max/Ultra, 2022)
 	</ul>
 	<li>Broadcom BCM2837/BCM2711
 	<ul>
