--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.8 вышла 9 апреля 2022 года.
+Портированная версия rpki-client 7.9 вышла 14 июля 2022 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -33,8 +33,8 @@
 
 <p>
 rpki-client работат на всех операционных системах, где есть библиотека libcrypto,
-основанная на OpenSSL 1.1 или LibreSSL 3.4, и библиотека libtls, совместимая
-с LibreSSL 3.4 или более новой.
+основанная на OpenSSL 1.1 или LibreSSL 3.5, и библиотека libtls, совместимая
+с LibreSSL 3.5 или более новой.
 
 <p>
 На момент написания портированная версия rpki-client собиралась и работала на
@@ -43,14 +43,13 @@ rpki-client работат на всех операционных система
 <ul>
 	<li>OpenBSD
     <li>FreeBSD
-	<li>Linux (Alpine, CentOS, Debian, Fedora, Red Hat, Rocky, Ubuntu)
+	<li>Linux
 	<li>macOS
 	<li>Windows Subsystem for Linux 2
 </ul>
 
 <p>
-rpki-client может работать и на других ОС, более новых и старых, но
-вышеперечисленные регулярно тестируются разработчиками. Отчеты (успех или нет)
+rpki-client может работать и на других ОС. Отчеты (успех или нет)
 приветствуются. Вы можете сообщить об ошибках или отправлять pull request в
 <a href="https://github.com/rpki-client/rpki-client-portable">проект на GitHub</a>.
 
