[1.92] sync - libressl/releases.html

--- a/libressl/releases.html
+++ b/libressl/releases.html
@@ -26,19 +26,19 @@ ChangeLog</a> отражена история разработки LibreSSL.
 
 Портируемая версия LibreSSL без проблем работает на следующих платформах:
 <ul>
-	<li>Linux (на ядре 3.17 или более новом)
-	<li>FreeBSD (в версии 9.2 и более новых)
-	<li>NetBSD (версия 7.0 или более новая)
-	<li>HP-UX (11i)
-	<li>Solaris (11 или более новые)
-	<li>macOS (протестированно в версии 10.8 и более новых)
-	<li>AIX (5.3 и броее новые)
+	<li>Linux
+	<li>FreeBSD
+	<li>NetBSD
+	<li>HP-UX
+	<li>Solaris
+	<li>macOS
+	<li>AIX
 </ul>
 
 <p>
 LibreSSL работает и в Windows:
 <ul>
-	<li>Microsoft Windows (Vista или новее, x86 и x64)
+	<li>Microsoft Windows
 	<li>Wine (32х битные и 64х битные)
 	<li>Сборки с Visual Studio 2013 или с более новой версией, Mingw-w64 и Cygwin
 </ul>
