--- a/hackathons.html
+++ b/hackathons.html
@@ -88,7 +88,16 @@ td {
 <p>
 
 <table>
-<tr>
+<td>
+    <a id="g2k22" href="images/hackathons/g2k22.gif">
+    <img src="images/hackathons/g2k22-s.gif" alt="g2k22"></a><br>
+    g2k22: hackathon<br>
+    29 августа - 4 сентября, 2022<br>
+    Замок Либенцелль, Германия<br>
+    25 разработчиков<br>
+    Организован благодаря финансированию со стороны
+    <a href="http://www.genua.de">genua</a> и
+    <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
 <td>
     <a id="r2k22" href="images/hackathons/r2k22.gif">
     <img src="images/hackathons/r2k22-s.gif" alt="r2k22"></a><br>
@@ -112,6 +121,7 @@ td {
     поддержке Pedro Almeida и
     <a href="https://www.cm-gouveia.pt/">муниципалитета Говеи</a>.
     <br>
+<tr>
 <td>
     <a id="k2k21" href="images/hackathons/k2k21.gif">
     <img src="images/hackathons/k2k21-s.gif" alt="k2k21"></a><br>
@@ -130,7 +140,6 @@ td {
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="a2k20" href="images/hackathons/a2k20.png">
     <img src="images/hackathons/a2k20-s.png" alt="a2k20"></a><br>
@@ -141,6 +150,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Росса Л. Ричардсона.
+<tr>
 <td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
@@ -162,7 +172,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.xplornet.ca">Xplornet</a>.
-<tr>
 <td>
     <a id="p2k19" href="images/hackathons/p2k19.gif">
     <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
@@ -175,6 +184,7 @@ td {
     и поддержке
     <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук бухарестского университета</a>.
     <br>
+<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -196,7 +206,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
-<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -208,6 +217,7 @@ td {
     <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -228,7 +238,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Oracle, а также при поддержке Univerzita Jana Evangelisty Purkyn&#283;.
-<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -239,6 +248,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -259,7 +269,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -270,6 +279,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -291,7 +301,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -302,6 +311,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -320,7 +330,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
-<tr>
 <td>
     <br>
     <br>
@@ -343,6 +352,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
+<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -362,7 +372,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.cl.cam.ac.uk">компьютерной лаборатории в Кэмбридже</a>.
-<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -374,6 +383,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.oracle.com">Oracle</a>, а также помощи
     <a href="http://cuni.cz">Charles University</a>.
+<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -394,7 +404,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://esdenera.com">Esdenera Networks</a>.
-<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -405,6 +414,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -424,7 +434,6 @@ td {
     6 разработчиков<br>
     Организова при поддержке
     <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
-<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -435,6 +444,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://sait.ca">SAIT</a>.
+<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -455,7 +465,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Девида Гвинне (David Gwynne).
-<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -466,6 +475,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
+<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -486,7 +496,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -497,6 +506,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -517,7 +527,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -528,6 +537,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -546,7 +556,6 @@ td {
     23 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -556,6 +565,7 @@ td {
     41 разработчик<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -576,7 +586,6 @@ td {
     15 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -587,6 +596,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -606,7 +616,6 @@ td {
     36 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -616,6 +625,7 @@ td {
     15 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -632,7 +642,6 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -642,6 +651,7 @@ td {
     46 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <br>
     <br>
@@ -669,7 +679,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -679,6 +688,7 @@ td {
     14 разоаботчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -697,7 +707,6 @@ td {
     46 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -705,6 +714,7 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -724,7 +734,6 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -734,6 +743,7 @@ td {
     55 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -754,7 +764,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -764,6 +773,7 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -782,7 +792,6 @@ td {
     14 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -793,6 +802,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -809,7 +819,6 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
-<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -818,6 +827,7 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
+<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -836,7 +846,6 @@ td {
     12 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -846,6 +855,7 @@ td {
     60 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -863,7 +873,6 @@ td {
     Сишелт, Британская Колумбия, Канада<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
-<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -874,6 +883,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
+<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -890,7 +900,6 @@ td {
     Вашингтон, округ Колумбия<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.usenix.org">USENIX</a>.
-<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -900,6 +909,7 @@ td {
     25 разработчиков<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.mit.edu">MIT</a>.
+<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
