--- a/errata.html
+++ b/errata.html
@@ -82,4 +82,5 @@
 <a href="https://www.openbsd.org/errata68.html">6.8</a>,
 <a href="https://www.openbsd.org/errata69.html">6.9</a>,
 <a href="https://www.openbsd.org/errata70.html">7.0</a>,
-<a href="https://www.openbsd.org/errata70.html">7.1</a>.
+<a href="https://www.openbsd.org/errata70.html">7.1</a>,
+<a href="https://www.openbsd.org/errata70.html">7.2</a>.
