[1.31] 8.0 release - rpki-client/index.html

--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -39,8 +39,8 @@
 
 <p id="callout">
 
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.9.txt">
-rpki-client 7.9</a> вышел 14 июля 2022 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.0.txt">
+rpki-client 8.0</a> вышел 11 сентября 2022 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
