[1.163] typo - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -103,7 +103,7 @@ td {
     <img src="images/hackathons/r2k22-s.gif" alt="r2k22"></a><br>
     r2k22: hackathon<br>
     Июнь 25 - июль 1, 2022<br>
-    Брюгес, Бельгия<br>
+    Брюгге, Бельгия<br>
     24 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
