[1.467] OpenBGPD 7.6 release - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 7.3 состоялся 13 апреля 2022 года.
+Релиз портированной версии OpenBGPD 7.6 состоялся 15 сентября 2022 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
@@ -32,14 +32,13 @@
 
 <ul>
 	<li>OpenBSD
-	<li>Linux (Debian, Ubuntu, Alpine)
+	<li>Linux
 	<li>FreeBSD
 </ul>
 
 <p>
-OpenBGPD может работать и на других операционных системах, более новых или
-старых, но на вышеперечисленные системах OpenBGPD регулярно тестируется
-разработчиками. Отчеты (успех или нет) приветствуются.
+OpenBGPD может работать и на других операционных системах.
+Отчеты (успех или нет) приветствуются.
 Вы можете сообщить нам о проблемах/ошибках/багах или отправить pull requests
 в <a href="https://github.com/openbgpd-portable">GitHub проект</a>.
 
