[1.466] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -53,18 +53,16 @@
 
 <ul>
 	<li>OpenBSD
-	<li>Linux (Ubuntu 12.04, 14.04)
-	<li>FreeBSD (9.x, 10.x)
-	<li>NetBSD (6.1.5)
-	<li>Solaris (10.x, 11.x)
-	<li>macOS (10.9)
+	<li>Linux
+	<li>FreeBSD
+	<li>NetBSD
+	<li>Solaris
+	<li>macOS
 </ul>
 
 <p>
-OpenNTPD может работать и на других ОС, более новых и старых, но
-вышеперечисленные регулярно тестируются разработчиками. Отчеты
-(успех или нет) приветствуются. Вы можете сообщить об ошибках или
-отправлять pull request в 
+OpenNTPD может работать и на других ОС. Отчеты (успех или нет)
+приветствуются. Вы можете сообщить об ошибках или отправлять pull request в
 <a href="https://github.com/openntpd-portable">проект на GitHub</a>.
 
 <h3>Электронная подпись</h3>
