--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.9 вышла 14 июля 2022 года.
+Портированная версия rpki-client 8.0 вышла 11 сентября 2022 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
